[gd_scene load_steps=2 format=3 uid="uid://bmd1idc70kmiu"]

[ext_resource type="Script" uid="uid://bmwtnxhcx165w" path="res://scripts/Card.gd" id="1_0x2y3"]

[node name="Card" type="Control"]
custom_minimum_size = Vector2(160, 220)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -110.0
offset_right = 80.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0x2y3")

[node name="CardShadow" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.4)

[node name="CardBackground" type="Panel" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CardBG" type="ColorRect" parent="CardBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.15, 0.15, 0.25, 1)

[node name="CardBorder" type="ColorRect" parent="CardBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.25, 0.35, 1)

[node name="CardInner" type="ColorRect" parent="CardBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25, 0.3, 0.4, 1)

[node name="VBox" type="VBoxContainer" parent="CardBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderContainer" type="HBoxContainer" parent="CardBackground/VBox"]
layout_mode = 2
size_flags_vertical = 0

[node name="NameLabel" type="Label" parent="CardBackground/VBox/HeaderContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 13
text = "Carta"
vertical_alignment = 1
autowrap_mode = 2

[node name="CostContainer" type="Panel" parent="CardBackground/VBox/HeaderContainer"]
clip_contents = true
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_horizontal = 0

[node name="CostBG" type="ColorRect" parent="CardBackground/VBox/HeaderContainer/CostContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.4, 0.8, 1)

[node name="CostLabel" type="Label" parent="CardBackground/VBox/HeaderContainer/CostContainer"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CardBackground/VBox"]
layout_mode = 2

[node name="ArtContainer" type="Panel" parent="CardBackground/VBox"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="ArtBG" type="ColorRect" parent="CardBackground/VBox/ArtContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3, 0.35, 0.45, 1)

[node name="CardIcon" type="Label" parent="CardBackground/VBox/ArtContainer"]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.0
offset_top = -22.5
offset_right = 25.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "‚öîÔ∏è"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="CardBackground/VBox"]
layout_mode = 2

[node name="StatsContainer" type="HBoxContainer" parent="CardBackground/VBox"]
layout_mode = 2
size_flags_vertical = 0

[node name="StatValue" type="Label" parent="CardBackground/VBox/StatsContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatIcon" type="Label" parent="CardBackground/VBox/StatsContainer"]
visible = false
clip_contents = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 16
text = "üí•"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="CardBackground/VBox"]
layout_mode = 2

[node name="DescriptionContainer" type="Panel" parent="CardBackground/VBox"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="DescBG" type="ColorRect" parent="CardBackground/VBox/DescriptionContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 0.8)

[node name="DescriptionLabel" type="Label" parent="CardBackground/VBox/DescriptionContainer"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 12
text = "Descripci√≥n"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HSeparator4" type="HSeparator" parent="CardBackground/VBox"]
layout_mode = 2

[node name="RarityContainer" type="Panel" parent="CardBackground/VBox"]
clip_contents = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 0

[node name="RarityBG" type="ColorRect" parent="CardBackground/VBox/RarityContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4, 0.4, 0.4, 0.6)

[node name="RarityLabel" type="Label" parent="CardBackground/VBox/RarityContainer"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 2.0
offset_right = -4.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 10
text = "[Com√∫n]"
horizontal_alignment = 1
vertical_alignment = 1
